################################################################################
#  TOOLS GENERATION
################################################################################
ADD_SUBDIRECTORY(SRC_linker_ram)
ADD_SUBDIRECTORY(SRC_linker_disk)
ADD_SUBDIRECTORY(SRC_counter)
ADD_SUBDIRECTORY(SRC_counter_hashtable)

